--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.5.5",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
@@ -19,8 +22,12 @@
   },
   "dependencies": {
     "@prisma/client": "^5.19.1",
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
-    "prisma": "^5.19.1"
+    "jsonwebtoken": "^9.0.2",
+    "prisma": "^5.19.1",
+    "zod": "^3.23.8"
   }
 }
