--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^5.19.1",
+    "socket.io": "^4.8.0",
     "zod": "^3.23.8"
   }
 }
